--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -234,7 +234,7 @@ body.dark .contact-page-container {
     color: #f8f8f2;
 }
 
-body.dark .contact-page-container .container {
+body.dark .contact-page-container {
     background-color: rgba(35, 37, 47, 0.5) !important;
 }
 
